@@ -1,7 +1,8 @@
 TODO
 
-- test .zap update with webcleanerconf
-
+- some .tgz files have content-type text/plain. Adjust guess_mimetypes
+  for that
+  
 - HTTPS support (only proxy, no filtering)
   It's sort of an extension to HTTP - you just send the proxy the request
   CONNECT home.netscape.com:443 HTTP/1.0\r\n\r\n
