@@ -2,12 +2,12 @@ Source: webcleaner
 Section: web
 Priority: optional
 Maintainer: Bastian Kleineidam <calvin@debian.org>
-Standards-Version: 3.5.6.0
-Build-Depends: python2-dev, debhelper (>= 3.0.0), debconf
+Standards-Version: 3.5.6
+Build-Depends: python2.1-dev, debhelper (>= 3.0.0), debconf
 
 Package: webcleaner
 Architecture: any
-Depends: python2-base, python2-zlib, debconf
+Depends: python2.1-base, python2.1-xmlbase, debconf
 Suggests: webcleanerconf
 Description: a filtering HTTP proxy
  Features:
@@ -20,6 +20,6 @@ Description: a filtering HTTP proxy
 
 Package: webcleanerconf
 Architecture: all
-Depends: python2-base, fxpy0.99-python2 (>= 0.99.172), webcleaner
+Depends: python2.1-base, fxpy0.99-python2.1 (>= 0.99.172), webcleaner
 Description: configuration tool for webcleaner
  This is a nice GUI configuration tool for the WebCleaner proxy.
