@@ -1,6 +1,7 @@
 #! /usr/bin/make -f
 # Sample debian/rules that uses debhelper.
 # GNU copyright 1997 to 1999 by Joey Hess.
+PYTHON=python2.1
 PACKAGE=webcleaner
 DOCDIR = debian/$(PACKAGE)/usr/share/doc/$(PACKAGE)
 
@@ -16,26 +17,29 @@ export DH_OPTIONS
 configure: configure-stamp
 configure-stamp:
 	dh_testdir
-	./setup.py config
+	$(PYTHON) setup.py config
 	touch configure-stamp
 
 build: configure-stamp build-stamp
 build-stamp:
 	dh_testdir
-	./setup.py build
+	$(PYTHON) setup.py build
 	touch build-stamp
 
 clean:
 	dh_testdir
 	rm -f build-stamp configure-stamp
-	$(MAKE) clean
+	$(PYTHON) setup.py clean --all
+	$(MAKE) -C po clean
+	find . -name '*.py[co]' | xargs rm -f
+	rm -f index.html* test.gif
 	dh_clean
 
 install: build
 	dh_testdir
 	dh_clean -k
 	dh_installdirs
-	./setup.py install --root=`pwd`/debian/$(PACKAGE) --no-compile
+	$(PYTHON) setup.py install --root=`pwd`/debian/$(PACKAGE) --no-compile
 	# delete man pages, we install them with dh_installmanpages
 	rm -rf debian/$(PACKAGE)/usr/man
 	# delete INSTALL file
@@ -59,7 +63,7 @@ binary-arch: build install
 	dh_testdir
 	dh_testroot
 	dh_movefiles --sourcedir=debian/$(PACKAGE) -pwebcleanerconf \
-            usr/sbin/webcleanerconf usr/lib/python2.0/site-packages/wc/gui/
+            usr/sbin/webcleanerconf usr/lib/$(PYTHON)/site-packages/wc/gui/
 	dh_installdebconf
 	dh_installdocs
 #	dh_installexamples filtertest filtertest.html
