@@ -8,8 +8,8 @@ set -e
 db_version 2.0
 
 package=webcleaner
-PYTHON=/usr/bin/python2
-SITEPACKAGES=/usr/lib/python2.0/site-packages
+PYTHON=python2.1
+SITEPACKAGES=/usr/lib/$PYTHON/site-packages
 DIRLIST="wc"
 FILELIST="_webcleaner2_configdata.py"
 COMMAND="'import sys,py_compile;py_compile.compile(sys.argv[1])'"
@@ -17,8 +17,8 @@ COMMAND="'import sys,py_compile;py_compile.compile(sys.argv[1])'"
 case "$1" in
     configure|abort-upgrade|abort-remove|abort-deconfigure)
         for i in $DIRLIST; do
-            $PYTHON -O /usr/lib/python2.0/compileall.py -q $SITEPACKAGES/$i
-            $PYTHON /usr/lib/python2.0/compileall.py -q $SITEPACKAGES/$i
+            $PYTHON -O /usr/lib/$PYTHON/compileall.py -q $SITEPACKAGES/$i
+            $PYTHON /usr/lib/$PYTHON/compileall.py -q $SITEPACKAGES/$i
         done
 	# use /bin/sh -c, otherwise I get a SyntaxError from Python
         for i in $FILELIST; do
